--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.0"
+    "md5": "^2.3.0",
+    "mongoose": "^8.8.0",
+    "node-fetch": "^3.3.2"
   }
 }
